@@ -248,7 +248,6 @@ public class TownyPlayerListener implements Listener {
 	/*
 	* PlayerInteractEvent 
 	* 
-	*  Used to stop trampling of crops,
 	*  admin infotool,
 	*  item use check,
 	*  switch use check
@@ -269,64 +268,72 @@ public class TownyPlayerListener implements Listener {
 		if (event.hasItem()) {
 
 			/*
-			 * Info Tool
+			 * Info Tool.
 			 */
-			if (event.getPlayer().getInventory().getItemInMainHand().getType() == Material.getMaterial(TownySettings.getTool())) {
-
-				if (TownyUniverse.getInstance().getPermissionSource().isTownyAdmin(player)) {
-					if (event.getClickedBlock() != null) {
-
-						block = event.getClickedBlock();
-						
-						if (Tag.SIGNS.isTagged(block.getType())) {
-							BlockFace facing = null;
-							if (block.getBlockData() instanceof Sign) {
-								org.bukkit.block.data.type.Sign sign = (org.bukkit.block.data.type.Sign) block.getBlockData();
-								facing = sign.getRotation();
-							}
-							if (block.getBlockData() instanceof WallSign)  { 
-								org.bukkit.block.data.type.WallSign sign = (org.bukkit.block.data.type.WallSign) block.getBlockData();
-								facing = sign.getFacing();	
-							}
-							TownyMessaging.sendMessage(player, Arrays.asList(
-									ChatTools.formatTitle("Sign Info"),
-									ChatTools.formatCommand("", "Sign Type", "", block.getType().name()),
-									ChatTools.formatCommand("", "Facing", "", facing.toString())
-									));
-						} else if (Tag.DOORS.isTagged(block.getType())) {
-							org.bukkit.block.data.type.Door door = (org.bukkit.block.data.type.Door) block.getBlockData();
-							TownyMessaging.sendMessage(player, Arrays.asList(
-									ChatTools.formatTitle("Door Info"),
-									ChatTools.formatCommand("", "Door Type", "", block.getType().name()),
-									ChatTools.formatCommand("", "hinged on ", "", String.valueOf(door.getHinge())),
-									ChatTools.formatCommand("", "isOpen", "", String.valueOf(door.isOpen())),
-									ChatTools.formatCommand("", "getFacing", "", door.getFacing().name())
-									));
-						} else {
-							TownyMessaging.sendMessage(player, Arrays.asList(
-									ChatTools.formatTitle("Block Info"),
-									ChatTools.formatCommand("", "Material", "", block.getType().name()),								      
-									ChatTools.formatCommand("", "MaterialData", "", block.getBlockData().getAsString())
-									));
-						}
-						event.setUseInteractedBlock(Event.Result.DENY);
-						event.setCancelled(true);
+			if (event.getPlayer().getInventory().getItemInMainHand().getType() == Material.getMaterial(TownySettings.getTool()) 
+					&& TownyUniverse.getInstance().getPermissionSource().isTownyAdmin(player)
+					&& event.getClickedBlock() != null) {
+				block = event.getClickedBlock();
+				
+				if (Tag.SIGNS.isTagged(block.getType())) {
+					BlockFace facing = null;
+					if (block.getBlockData() instanceof Sign) {
+						org.bukkit.block.data.type.Sign sign = (org.bukkit.block.data.type.Sign) block.getBlockData();
+						facing = sign.getRotation();
 					}
+					if (block.getBlockData() instanceof WallSign)  { 
+						org.bukkit.block.data.type.WallSign sign = (org.bukkit.block.data.type.WallSign) block.getBlockData();
+						facing = sign.getFacing();	
+					}
+					TownyMessaging.sendMessage(player, Arrays.asList(
+							ChatTools.formatTitle("Sign Info"),
+							ChatTools.formatCommand("", "Sign Type", "", block.getType().name()),
+							ChatTools.formatCommand("", "Facing", "", facing.toString())
+							));
+				} else if (Tag.DOORS.isTagged(block.getType())) {
+					org.bukkit.block.data.type.Door door = (org.bukkit.block.data.type.Door) block.getBlockData();
+					TownyMessaging.sendMessage(player, Arrays.asList(
+							ChatTools.formatTitle("Door Info"),
+							ChatTools.formatCommand("", "Door Type", "", block.getType().name()),
+							ChatTools.formatCommand("", "hinged on ", "", String.valueOf(door.getHinge())),
+							ChatTools.formatCommand("", "isOpen", "", String.valueOf(door.isOpen())),
+							ChatTools.formatCommand("", "getFacing", "", door.getFacing().name())
+							));
+				} else {
+					TownyMessaging.sendMessage(player, Arrays.asList(
+							ChatTools.formatTitle("Block Info"),
+							ChatTools.formatCommand("", "Material", "", block.getType().name()),								      
+							ChatTools.formatCommand("", "MaterialData", "", block.getBlockData().getAsString())
+							));
 				}
+				event.setUseInteractedBlock(Event.Result.DENY);
+				event.setCancelled(true);
 
 			}
+			
+			/*
+			 * Test item_use.
+			 */
 			if (TownySettings.isItemUseMaterial(event.getItem().getType().name())) {
 				TownyMessaging.sendDebugMsg("ItemUse Material found: " + event.getItem().getType().name());
 				event.setCancelled(onPlayerInteract(player, event.getClickedBlock(), event.getItem()));
 			}
-		}
-		if (!event.useItemInHand().equals(Event.Result.DENY))
+			/*
+			 * Test switch use.
+			 */
 			if (event.getClickedBlock() != null) {
 				if (TownySettings.isSwitchMaterial(event.getClickedBlock().getType().name()) || event.getAction() == Action.PHYSICAL) {
 					onPlayerSwitchEvent(event, null);
 				}
 			}
-
+		}
+		if (!event.useItemInHand().equals(Event.Result.DENY)) {
+			if (event.getClickedBlock() != null) {
+				if (TownySettings.isSwitchMaterial(event.getClickedBlock().getType().name()) || event.getAction() == Action.PHYSICAL) {
+					onPlayerSwitchEvent(event, null);
+				}
+			}
+		}
 	}
 
 	
